# image-classification

./: .gitignore  ARCHITECTURE.md  AnnotationManager.cpp  AnnotationManager.h  BUILD_MACOS.md  BUILD_WINDOWS.md  BoundingBox.cpp  BoundingBox.h  CI_CD_WORKFLOW.md  CLAUDE.md  CMakeLists.txt  FAQ.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  ImageCanvas.cpp  ImageCanvas.h  MACOS_PORT_SUMMARY.md  MainWindow.cpp  MainWindow.h  ModeSelectionDialog.cpp  ModeSelectionDialog.h  ObjectDetectionWindow.cpp  ObjectDetectionWindow.h  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_MACOS.md  QUICKSTART_WINDOWS.md  README.md  START_HERE.md  TESTING.md  TROUBLESHOOTING.md  TROUBLESHOOTING_MACOS.md  TROUBLESHOOTING_WINDOWS.md  USAGE_EXAMPLES.md  WINDOWS_PORT_SUMMARY.md  build.sh  build_macos.sh  build_windows.bat  install_dependencies.sh  (+5 more)
.github/: WORKFLOW_FIXES.md
.github/workflows/: build.yml
